Add groupname feature